Update HTML, CSS & JavaScript

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
       <div class="row align-items-end">
         <div class="col">
           <h1 id="current-city">London</h1>
-          <p class="sunday-weather">
+          <p class="current-weather">
             <span id="current-time">Sunday 12:15 </span> <br />
-            Light cloud and a gentle breeze
+            <span id="description">Light cloud and a gentle breeze</span>
           </p>
         </div>
         <div class="col current-temp">
@@ -55,8 +55,8 @@
             ><a href="#" id="celcius">°C|</a><a href="#" id="farenheit">°F</a>
           </h2>
           <p class="current-conditions">
-            Precipitation: 0% <br />
-            Wind: 11mph
+            Precipitation: <span id="precipitation">0</span>% <br />
+            Wind: <span id="wind">11</span>km/h
           </p>
         </div>
       </div>
