Add Geolocation Button

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
               class="search-box"
             />
             <input type="submit" value="Search" class="btn btn-info" />
+            <button id="geo-location-button">Current Location</button>
           </form>
         </div>
       </div>
