--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     />
     <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
   </head>
-  <body>
+  <body class="container">
     <div class="card">
       <div class="card-body">
         <div class="search-bar">
