--- a/index.html
+++ b/index.html
@@ -25,80 +25,85 @@
     />
     <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
   </head>
-  <body class="container">
-    <div class="card">
-      <div class="card-body">
-        <div class="search-bar">
-          <form id="city-search-form">
-            <input
-              type="text"
-              placeholder="Enter a city"
-              id="city-search-box"
-              class="search-box"
-            />
-            <input type="submit" value="Search" class="btn btn-info" />
-            <button id="geo-location-button">Current Location</button>
-          </form>
+  <body>
+    <div class="container">
+      <div class="card">
+        <div class="card-body">
+          <div class="search-bar">
+            <form id="city-search-form">
+              <input
+                type="text"
+                placeholder="Enter a city"
+                id="city-search-box"
+                class="search-box"
+              />
+              <input type="submit" value="Search" class="btn btn-info" />
+              <button id="geo-location-button">Current Location</button>
+            </form>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="container text-center">
-      <div class="row align-items-end">
-        <div class="col">
-          <h1 id="current-city">London</h1>
-          <p class="current-weather">
-            <span id="current-time">Sunday 12:15 </span> <br />
-            <span id="description">Light cloud and a gentle breeze</span>
-          </p>
-        </div>
-        <div class="col current-temp">
-          <h2>
-            <span class="cloud">☁️</span><span id="current-temp">18</span
-            ><a href="#" id="celcius">°C|</a><a href="#" id="farenheit">°F</a>
-          </h2>
-          <p class="current-conditions">
-            Precipitation: <span id="precipitation">0</span>% <br />
-            Wind: <span id="wind">11</span>km/h
-          </p>
+      <div class="container text-center">
+        <div class="row align-items-end">
+          <div class="col">
+            <h1 id="current-city">London</h1>
+            <p class="current-weather">
+              <span id="current-time">Sunday 12:15 </span> <br />
+              <span id="description">Light cloud and a gentle breeze</span>
+            </p>
+          </div>
+          <div class="col current-temp">
+            <h2>
+              <span class="current-temp-display"
+                ><span class="cloud">☁️</span><span id="current-temp">18</span
+                ><a href="#" id="celcius">°C|</a
+                ><a href="#" id="farenheit">°F</a></span
+              >
+            </h2>
+            <p class="current-conditions">
+              Precipitation: <span id="precipitation">0</span>% <br />
+              Wind: <span id="wind">11</span>km/h
+            </p>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="container text-center days">
-      <div class="row align-items-end">
-        <div class="col">
-          <strong>Mon</strong>
-          <br />
-          20°C
-          <br />
-          ⛅
-        </div>
-        <div class="col">
-          <strong>Tue</strong>
-          <br />
-          18°C
-          <br />
-          ☀️
-        </div>
-        <div class="col">
-          <strong>Wed</strong>
-          <br />
-          21°C
-          <br />
-          ⛅
-        </div>
-        <div class="col">
-          <strong>Thur</strong>
-          <br />
-          20°C
-          <br />
-          ☀️
-        </div>
-        <div class="col">
-          <strong>Fri</strong>
-          <br />
-          19°C
-          <br />
-          ⛅
+      <div class="container text-center days">
+        <div class="row align-items-end">
+          <div class="col">
+            <strong>Mon</strong>
+            <br />
+            20°C
+            <br />
+            ⛅
+          </div>
+          <div class="col">
+            <strong>Tue</strong>
+            <br />
+            18°C
+            <br />
+            ☀️
+          </div>
+          <div class="col">
+            <strong>Wed</strong>
+            <br />
+            21°C
+            <br />
+            ⛅
+          </div>
+          <div class="col">
+            <strong>Thur</strong>
+            <br />
+            20°C
+            <br />
+            ☀️
+          </div>
+          <div class="col">
+            <strong>Fri</strong>
+            <br />
+            19°C
+            <br />
+            ⛅
+          </div>
         </div>
       </div>
     </div>
