Update positioning, font style and colour scheme

--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="src/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
     <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
+    <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
-    <div class="container">
+    <div class="body-container">
       <div class="card">
         <div class="card-body">
           <div class="search-bar">
@@ -43,22 +43,19 @@
           </div>
         </div>
       </div>
-      <div class="container text-center">
+      <div class="container text-center main-display">
         <div class="row align-items-end">
-          <div class="col">
+          <div class="col city">
             <h1 id="current-city">London</h1>
             <p class="current-weather">
               <span id="current-time">Sunday 12:15 </span> <br />
               <span id="description">Light cloud and a gentle breeze</span>
             </p>
           </div>
-          <div class="col current-temp">
+          <div class="col current-temp-display">
             <h2>
-              <span class="current-temp-display"
-                ><span class="cloud">☁️</span><span id="current-temp">18</span
-                ><a href="#" id="celcius">°C|</a
-                ><a href="#" id="farenheit">°F</a></span
-              >
+              <span class="cloud">☁️</span><span id="current-temp">18</span
+              ><a href="#" id="celcius">°C|</a><a href="#" id="farenheit">°F</a>
             </h2>
             <p class="current-conditions">
               Precipitation: <span id="precipitation">0</span>% <br />
