edit font colour

--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
           <div class="col current-temp-display">
             <h2>
               <span class="cloud">☁️</span><span id="current-temp">18</span
-              ><a href="#" id="celcius">°C|</a><a href="#" id="farenheit">°F</a>
+              ><a href="#" id="celcius">°C|</a
+              ><a href="#" id="fahrenheit">°F</a>
             </h2>
             <p class="current-conditions">
               Precipitation: <span id="precipitation">0</span>% <br />
