--- a/index.html
+++ b/index.html
@@ -105,6 +105,15 @@
         </div>
       </div>
     </div>
+    <footer>
+      <a
+        href="https://github.com/Lydia1596/vanilla_weather_app.git"
+        target="_blank"
+        class="github-link"
+        >Open-source code</a
+      >
+      by Lydia Prentice
+    </footer>
     <script src="src/app.js"></script>
   </body>
 </html>
