edit weather icon

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
           </div>
           <div class="col current-temp-display">
             <h2>
-              <span class="cloud">☁️</span><span id="current-temp">18</span
-              ><a href="#" id="celcius">°C|</a
+              <span class="cloud" id="icon">☁️</span
+              ><span id="current-temp">18</span><a href="#" id="celcius">°C|</a
               ><a href="#" id="fahrenheit">°F</a>
             </h2>
             <p class="current-conditions">
