update weather icon using API

--- a/index.html
+++ b/index.html
@@ -54,8 +54,11 @@
           </div>
           <div class="col current-temp-display">
             <h2>
-              <span class="cloud" id="icon">☁️</span
-              ><span id="current-temp">18</span><a href="#" id="celcius">°C|</a
+              <img
+                id="icon"
+                src="https://openweathermap.org/img/wn/10d@2x.png"
+              />
+              <span id="current-temp">18</span><a href="#" id="celcius">°C|</a
               ><a href="#" id="fahrenheit">°F</a>
             </h2>
             <p class="current-conditions">
