add alt text for img

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
           <div class="col current-temp-display">
             <h2>
               <img
+                alt=""
                 id="icon"
                 src="https://openweathermap.org/img/wn/10d@2x.png"
               />
