Make the C or F bold when active

--- a/index.html
+++ b/index.html
@@ -59,8 +59,10 @@
                 id="icon"
                 src="https://openweathermap.org/img/wn/10d@2x.png"
               />
-              <span id="current-temp">18</span><a href="#" id="celcius">°C|</a
-              ><a href="#" id="fahrenheit">°F</a>
+              <span id="current-temp">18</span
+              ><a href="#" class="active" id="celcius">°C</a
+              ><span id="divider">|</span
+              ><a href="#" class="active" id="fahrenheit">°F</a>
             </h2>
             <p class="current-conditions">
               Precipitation: <span id="precipitation">0</span>% <br />
