Edit icons for weather forecast

--- a/index.html
+++ b/index.html
@@ -71,42 +71,62 @@
           </div>
         </div>
       </div>
-      <div class="container text-center days">
+      <div class="container text-center forecast">
         <div class="row align-items-end">
           <div class="col">
             <strong>Mon</strong>
             <br />
             20°C
             <br />
-            ⛅
+            <img
+              src="https://openweathermap.org/img/wn/10d@2x.png"
+              alt=""
+              width="90"
+            />
           </div>
           <div class="col">
             <strong>Tue</strong>
             <br />
             18°C
             <br />
-            ☀️
+            <img
+              src="https://openweathermap.org/img/wn/10d@2x.png"
+              alt=""
+              width="90"
+            />
           </div>
           <div class="col">
             <strong>Wed</strong>
             <br />
             21°C
             <br />
-            ⛅
+            <img
+              src="https://openweathermap.org/img/wn/10d@2x.png"
+              alt=""
+              width="90"
+            />
           </div>
           <div class="col">
             <strong>Thur</strong>
             <br />
             20°C
             <br />
-            ☀️
+            <img
+              src="https://openweathermap.org/img/wn/10d@2x.png"
+              alt=""
+              width="90"
+            />
           </div>
           <div class="col">
             <strong>Fri</strong>
             <br />
             19°C
             <br />
-            ⛅
+            <img
+              src="https://openweathermap.org/img/wn/10d@2x.png"
+              alt=""
+              width="90"
+            />
           </div>
         </div>
       </div>
