Add min and max temperature for forecast

--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
           <div class="col">
             <strong>Mon</strong>
             <br />
-            20°C
+            <span class="max-temp">20°C</span>
+            <span class="min-temp">15°C</span>
             <br />
             <img
               src="https://openweathermap.org/img/wn/10d@2x.png"
@@ -87,7 +88,8 @@
           <div class="col">
             <strong>Tue</strong>
             <br />
-            18°C
+            <span class="max-temp">20°C</span>
+            <span class="min-temp">15°C</span>
             <br />
             <img
               src="https://openweathermap.org/img/wn/10d@2x.png"
@@ -98,7 +100,8 @@
           <div class="col">
             <strong>Wed</strong>
             <br />
-            21°C
+            <span class="max-temp">20°C</span>
+            <span class="min-temp">15°C</span>
             <br />
             <img
               src="https://openweathermap.org/img/wn/10d@2x.png"
@@ -109,7 +112,8 @@
           <div class="col">
             <strong>Thur</strong>
             <br />
-            20°C
+            <span class="max-temp">20°C</span>
+            <span class="min-temp">15°C</span>
             <br />
             <img
               src="https://openweathermap.org/img/wn/10d@2x.png"
@@ -120,7 +124,8 @@
           <div class="col">
             <strong>Fri</strong>
             <br />
-            19°C
+            <span class="max-temp">20°C</span>
+            <span class="min-temp">15°C</span>
             <br />
             <img
               src="https://openweathermap.org/img/wn/10d@2x.png"
