--- a/index.html
+++ b/index.html
@@ -71,22 +71,7 @@
           </div>
         </div>
       </div>
-      <div class="container text-center forecast">
-        <div class="row align-items-end">
-          <div class="col">
-            <strong>Mon</strong>
-            <br />
-            <span class="max-temp">20°C</span>
-            <span class="min-temp">15°C</span>
-            <br />
-            <img
-              src="https://openweathermap.org/img/wn/10d@2x.png"
-              alt=""
-              width="90"
-            />
-          </div>
-        </div>
-      </div>
+      <div class="container text-center forecast" id="weather-forecast"></div>
     </div>
     <footer>
       <a
