Remove Fahrenheit Converter

--- a/index.html
+++ b/index.html
@@ -59,10 +59,7 @@
                 id="icon"
                 src="https://openweathermap.org/img/wn/10d@2x.png"
               />
-              <span id="current-temp">18</span
-              ><a href="#" class="active" id="celcius">°C</a
-              ><span id="divider">|</span
-              ><a href="#" class="active" id="fahrenheit">°F</a>
+              <span id="current-temp">18</span>°C
             </h2>
             <p class="current-conditions">
               Precipitation: <span id="precipitation">0</span>% <br />
