Change to SheCodes Weather API

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               <img
                 alt=""
                 id="icon"
-                src="https://openweathermap.org/img/wn/10d@2x.png"
+                src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/clear-sky-day.png"
               />
               <span id="current-temp">18</span>°C
             </h2>
